docss anddd  img

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -583,6 +583,7 @@
                                                  <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#Un-installInstructions"> Un-Install Instructions</a></li>
                                                  <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#MinimisedModeSettings"> Minimised Mode Settings</a></li>
                                                  <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#UnattendedModeSetup"> Unattended Mode Setup</a></li>
+                                                 <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#OutlookSettings"> Outlook Settings</a></li>
                                               </ul>
                                           </li>
                                           <li><a class="child 2" href="#Building"><span class="numbers"></span> Building a basic Action Flow</a></li>
@@ -1078,7 +1079,7 @@
                               <p style="text-align:center;"><strong>Figure:  Installing Techforce.ai OCR-1</strong></p>
                             <li><span class="numbers">2.</span> In the first screen of Techforce.ai OCR installation, select preferred language, and click “OK” which will start the installation of Techforce.ai OCR.</li>
                             <img src="{{ '/assets/images/doc-img122.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure:  Installing Techforce.ai OCR-1</strong></p>
+                            <p style="text-align:center;"><strong>Figure:  Installing Techforce.ai OCR-1</strong></p>
                             <li><span class="numbers">3.</span> Accept the license agreement of Techforce.ai OCR to continue the installation process.</li>
                             <img src="{{ '/assets/images/doc-img7.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure:  Installing Techforce.ai OCR-2</strong></p>
@@ -1284,6 +1285,37 @@
 
                           </div>
 
+                        <div id="OutlookSettings"  class="page-section">
+                        <h4>Outlook Settings</h4>
+                        <h5>The Outlook Prerequisites settings to use the Outlook actions to execute in RPA Action flow.</h5>
+                        <ol>
+                          <li><span class="numbers">1.</span><strong> Open the Outlook application with administrator permissions.</strong></li>
+                          <li>The File bar displays various options in the drop-down menu. The options are Exit, Save, and Save As.</li>
+                          <li><span class="numbers">2.</span><strong> Goto File menu  click on Options  Click on Trust Center  Click on Trust Center Settings  Click on Programmatic Access.</strong></li>
+                          <img src="{{ '/assets/images/doc-img163.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
+                          <img src="{{ '/assets/images/doc-img164.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
+                          <img src="{{ '/assets/images/doc-img165.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
+                          <img src="{{ '/assets/images/doc-img166.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
+
+                          <li><span class="numbers">3.</span><strong> Select the ‘Never warn me about suspicious activity’ radio button</strong></li>
+                          <img src="{{ '/assets/images/doc-img167.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
+
+                          <li><span class="numbers">4.</span><strong> Click on the OK button. Again click on the OK button.After doing these settings, you will not get the attached popup.</strong></li>
+                          <img src="{{ '/assets/images/doc-img168.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
+                          <img src="{{ '/assets/images/doc-img169.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
+                          <img src="{{ '/assets/images/doc-img170.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
+                          <li>The Help tab displays the installed version of the studio. </li>
+                        </ol>
+
+                        </div>
 
                          <div id="Building"  class="page-section">
                              <h4 class="amethyst"> Building a basic Action Flow</h4>
