--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1292,25 +1292,25 @@
                           <li><span class="numbers">1.</span><strong> Open the Outlook application with administrator permissions.</strong></li>
                           <li>The File bar displays various options in the drop-down menu. The options are Exit, Save, and Save As.</li>
                           <li><span class="numbers">2.</span><strong> Goto File menu  click on Options  Click on Trust Center  Click on Trust Center Settings  Click on Programmatic Access.</strong></li>
-                          <img src="{{ '/assets/images/doc-img163.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img163.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
-                          <img src="{{ '/assets/images/doc-img164.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img164.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
-                          <img src="{{ '/assets/images/doc-img165.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img165.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
-                          <img src="{{ '/assets/images/doc-img166.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img166.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
 
                           <li><span class="numbers">3.</span><strong> Select the ‘Never warn me about suspicious activity’ radio button</strong></li>
-                          <img src="{{ '/assets/images/doc-img167.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img167.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
 
                           <li><span class="numbers">4.</span><strong> Click on the OK button. Again click on the OK button.After doing these settings, you will not get the attached popup.</strong></li>
-                          <img src="{{ '/assets/images/doc-img168.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img168.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
-                          <img src="{{ '/assets/images/doc-img169.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img169.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
-                          <img src="{{ '/assets/images/doc-img170.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img170.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
                           <li>The Help tab displays the installed version of the studio. </li>
                         </ol>
